[package]
name = "dgraph-ws-client"
version = "0.2.4"
authors = ["Simon Liang <no.lhr0909@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
tungstenite = "0.10"
tokio-tungstenite = "0.10"
futures = "0.3"
ring = "0.16"
log = "0.4"
env_logger = "0.7"
dotenv = "0.15"
dgraph-tonic = { version = "0.6" }
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.12"
querystring = "1.1"
