[package]
name = "dgraph-ws-client"
version = "0.3.0"
authors = ["Simon Liang <simon@x-tech.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
tungstenite = "0.11"
tokio-tungstenite = "0.11"
futures = "0.3"
ring = "0.16"
log = "0.4"
env_logger = "0.7"
dotenv = "0.15"
# dgraph-tonic = { version = "0.8" }
dgraph-tonic = { git = "https://gitee.com/treelabtreelab/dgraph-tonic", branch = "expose-ilazyclient" }
anyhow = "1.0"
thiserror = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
base64 = "0.12"
querystring = "1.1"
